Added rank and viewed in list out property

--- a/RealEstateApp/templates/home/img_slider.html
+++ b/RealEstateApp/templates/home/img_slider.html
@@ -1,9 +1,9 @@
 {% load static %}
 
 <div class="slideshow-container" style="">
-  {% for property in properties %}
+  {% for property in propertiess %}
 <div class="mySlides fade">
-  <img src="{% if property.property.image %}{{property.property.image.url}}{% endif %}" style="width:100%">
+  <img src="{% if property.image %}{{property.image.url}}{% endif %}" style="width:100%;height:80vh;">
   
 </div>
 {% endfor %}
@@ -13,9 +13,10 @@
 <br>
 
 <div style="text-align:center">
+{% for property in propertiess %}
   <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
+  {% endfor %}
+  
 </div>
 <script>
 let slideIndex = 0;
