logout page designed

--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -50,8 +50,8 @@
         </div>
         <div class="col-sm-2">
           
-           <p><b>Viewed :<b> {{property.viewed}}</p>
-           <p><b>Ranting :<b> {{property.rank}}</p>
+           <b>Viewed :<b> {{property.viewed}}
+           <b>Ranking :<b> {{property.rank}}
           <a class="card-text float-right text-decoration-none" style="font-size: 0.9rem" href="{% url 'realestateapp:detail_property' slug=property.property.slug %}" >
         Check-Availability
         </a>
