Added design of list property

--- a/RealEstateApp/static/css/property/list_property.css
+++ b/RealEstateApp/static/css/property/list_property.css
@@ -74,7 +74,7 @@
 }
 
 .book_btn:active {
-  background-color: #3e8e41;
+  background-color ;
   box-shadow: 0 2px #666;
   transform: translateY(4px);
 }
