added data in db

--- a/RealEstateApp/templates/property/list_property.html
+++ b/RealEstateApp/templates/property/list_property.html
@@ -1,7 +1,7 @@
 {% include 'base.html' %} {% block content %}
 <div class="container row">
 <div class="col-sm-4">
-<h4 class="text-left mt-4 ml-4">List The Property</h4>
+<h4 class="text-left mt-4 ml-4">List The Hotels</h4>
 </div>
 <div class="col-sm-8 d-flex justify-content-end">
  <form action="{% url 'realestateapp:search_with_property_name' %}">
@@ -17,7 +17,7 @@
 <div class="container justify-content-center mt-4 mb-4">
   <div class="row">
     {% if not properties %}
-    <p class="text-center"> No property found.</p>
+    <p class="text-center"> No hotels found.</p>
  
   {% endif %}
     {% for property in properties %}
