--- a/RealEstateApp/templates/home/img_slider.html
+++ b/RealEstateApp/templates/home/img_slider.html
@@ -3,15 +3,15 @@
 <div class="slideshow-container" style="">
 
 <div class="mySlides fade">
-  <img src="{% if property.image %}{{property.image.url}}{% endif %}" style="width:100%;height:80vh;">
+  <img src="{% static 'images/slideimages/image15.jpg' %}" style="width:100%;height:80vh;">
   
 </div>
 <div class="mySlides fade">
-  <img src="{% if property.image %}{{property.image.url}}{% endif %}" style="width:100%;height:80vh;">
+  <img src="{% static 'images/slideimages/image17.jpg' %}" style="width:100%;height:80vh;">
   
 </div>
 <div class="mySlides fade">
-  <img src="{% if property.image %}{{property.image.url}}{% endif %}" style="width:100%;height:80vh;">
+  <img src="{% static 'images/slideimages/image11.jpg' %}" style="width:100%;height:80vh;">
   
 </div>
 
@@ -46,6 +46,6 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 5000); // Change image every 2 seconds
+  setTimeout(showSlides, 4000); // Change image every 4 seconds
 }
 </script>
