--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -30,7 +30,7 @@
   <div>
    <nav class="navbar">
      <!-- LOGO -->
-     <div class="logo"><a href="/" style="color: #fff;font-family: cursive;text-decoration: none;">Hotel Booking</a></div>
+     <div class="logo"><a href="/" style="color: #fff;font-family: Serif;text-decoration: none;">Hotel Booking</a></div>
      <!-- NAVIGATION MENU -->
      <ul class="nav-links">
        <!-- <label for="checkbox_toggle" class="hamburger">&#9776;</label> -->
