--- a/AdminUser/templates/admin/approving_property/list_draft_property.html
+++ b/AdminUser/templates/admin/approving_property/list_draft_property.html
@@ -1,6 +1,6 @@
-{% extends 'admin/adminPanel.html' %} {% block adminContent %}
+{% extends "admindashboard/default.html" %} {% block content %}
 
-<h3 style="color: #81348a;">List Draft Properties for Approving</h3>
+<h3 class="text-primary">List Draft Properties for Approving</h3>
 
     {% if not properties %}
         <p> No data found </p>
