--- a/AdminUser/templates/admin/approving_property/create_popular_locations.html
+++ b/AdminUser/templates/admin/approving_property/create_popular_locations.html
@@ -1,5 +1,8 @@
-{% extends 'admin/adminHome.html' %}  {% load widget_tweaks %} {% block title %} Add Popular Location {% endblock %}{% block Dashboard %} 
+{% extends "admindashboard/default.html" %}  {% load widget_tweaks %} {% block title %} Add Popular Location {% endblock %}{% block content %} 
+
+
 <div class="container col-sm-6">
+<h3 class="text-centre text-primary" ><spam > Add Popular Location</spam></h3>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {% for field in form.visible_fields %}
@@ -13,6 +16,7 @@
 {% endfor %}
 
   <button type="submit" class="btn btn-primary mt-2 mb-2">Submit</button>
+  <a class="btn btn-primary mt-2 mb-2 float-right" href="{% url 'admin_user:admin_home' %}"> Cancel </a>
 </form>
 </div>
 {% endblock %}
