--- a/AdminUser/templates/admin/users/list_users.html
+++ b/AdminUser/templates/admin/users/list_users.html
@@ -1,9 +1,10 @@
 {% extends 'admin/adminPanel.html' %} {% block adminContent %}
 
-<h3 style="color: #1dc418;">Manage normal Users</h3>
+<h1 style="font-family:Sans-serif;">Manage normal Users</h1>
 <table class="table" style="color: black;">
   <thead>
-    <tr style="color: #bf0d28;">
+    <tr style="background-color:#2fa362;
+    color: #fff; ">
       <th scope="col">S.No</th>
       <th scope="col">Username</th>
       <th scope="col">Email</th>
