--- a/AdminUser/templates/admin/adminPanel.html
+++ b/AdminUser/templates/admin/adminPanel.html
@@ -1,39 +1,41 @@
-{% extends 'admin/adminHome.html' %} {% block Dashboard %}
+{% extends 'admin/adminHome.html' %} 
+
+{% block Dashboard %}
 <div class="row">
-  <div class="col-sm-3" style="background-color: DodgerBlue">
-    <h3 style="color: #fff; height: 30px; text-align: center;" >WELCOME ADMIN</h3>
+  <div class="col-sm-2" style="background-color: #fff;">
+    <h3 style="color:#0039c3; height: 30px; text-align: center;" >WELCOME ADMIN</h3>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
         <a class="text-decoration-none" href="{% url 'admin_user:admin_home' %}"
-          ><button style="color: green; width: 250px; ">Dashboard</button></a>
+          ><button style="color: #0039c3;  width:90%;margin-left: 1.5em; ">Dashboard</button></a>
       </li>
        <li class="list-group-item">
         <a class="text-decoration-none" href="{% url 'admin_user:approving_property_list' %}"
-          ><button style="color: green; width: 250px; ">Approved Property</button></a
+          ><button style="color:#0039c3; width: 90%; margin-left: 1.5em; ">Approved Property</button></a
         >
       </li>
       <li class="list-group-item">
         <a
           class="text-decoration-none"
           href="{% url 'admin_user:manage_users' %}"
-          ><button style="color: green; width: 250px; ">Manage Admin Users</button></a
+          ><button style="color:#0039c3; width: 90%;margin-left: 1.5em;">Manage Admin Users</button></a
         >
       </li>
       <li class="list-group-item"><a
           class="text-decoration-none"
           href="{% url 'admin_user:manage_admin_role' %}"
-          ><button style="color: green; width: 250px;  ">Manage Admin Roles</button></a></li>
+          ><button style="color:#0039c3; width: 90%;margin-left: 1.5em;  ">Manage Admin Roles</button></a></li>
       <li class="list-group-item"><a
           class="text-decoration-none"
           href="{% url 'admin_user:normal_users' %}"
-          ><button style="color: green; width: 250px; ">Normal users</button></a></li>
+          ><button style="color:#0039c3; width: 90%; margin-left: 1.5em;">Normal users</button></a></li>
           <li class="list-group-item"><a
           class="text-decoration-none"
           href="{% url 'admin_user:add_popular_location' %}"
-          ><button style="color: green; width: 250px; ">Add Popular Location</button></a></li>
+          ><button style="color:#0039c3; width: 90%; margin-left: 1.5em;">Add Popular Location</button></a></li>
     </ul>
   </div>
-  <div class="col-sm-9" style="background-color: #ffe6e6">
+  <div class="col-sm-10" style="background-color: #fff;">
     {% block adminContent %} {% endblock %}
   </div>
 </div>
