--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -23,6 +23,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
    <title>Document</title>
+  
    {% block style %}
    {% endblock %}
  </head>
@@ -30,7 +31,7 @@
   <div>
    <nav class="navbar">
      <!-- LOGO -->
-     <div class="logo"><a href="/" style="color: #fff;font-family: cursive;text-decoration: none;">Hotel Booking</a></div>
+     <div class="logo"><a href="/" style="color: #fff;font-family: Serif;text-decoration: none;">Hotel Booking</a></div>
      <!-- NAVIGATION MENU -->
      <ul class="nav-links">
        <!-- <label for="checkbox_toggle" class="hamburger">&#9776;</label> -->
