Added icon in admin dashboard and applied font family

--- a/AdminUser/templates/admindashboard/default.html
+++ b/AdminUser/templates/admindashboard/default.html
@@ -80,7 +80,7 @@
     {% block stylesheets %}{% endblock stylesheets %}
 
   </head>
-  <body class="app">
+  <body class="app" style="font-family: sans-serif;">
     <!-- @TOC -->
     <!-- =================================================== -->
     <!--
