--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -27,7 +27,7 @@
    {% block style %}
    {% endblock %}
  </head>
- <body>
+ <body style="font-family: sans-serif;">
   <div>
    <nav class="navbar">
      <!-- LOGO -->
