footer part modification done

--- a/RealEstateApp/templates/home/footer.html
+++ b/RealEstateApp/templates/home/footer.html
@@ -1,7 +1,7 @@
 {% load static %}
-    <footer class="footer-section">
+    <footer class="footer-section" style="background-color: #1adb8a;">
         <div class="container">
-            <div class="footer-cta pt-5 pb-5">
+            <div class="footer-cta pt-1 pb-1">
                 <div class="row">
                     <div class="col-xl-4 col-md-4 mb-30">
                         <div class="single-cta">
@@ -17,7 +17,7 @@
                             <i class="fas fa-phone"></i>
                             <div class="cta-text">
                                 <h4>Call us</h4>
-                                <span>000000000 0</span>
+                                <span>1800037500</span>
                             </div>
                         </div>
                     </div>
@@ -26,7 +26,7 @@
                             <i class="far fa-envelope-open"></i>
                             <div class="cta-text">
                                 <h4>Mail us</h4>
-                                <span>mail@info.com</span>
+                                <span>booking@info.com</span>
                             </div>
                         </div>
                     </div>
