--- a/RealEstateApp/templates/home/footer.html
+++ b/RealEstateApp/templates/home/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-    <footer class="footer-section" style="background-color: #1adb8a;">
+    <footer class="footer-section">
         <div class="container">
             <div class="footer-cta pt-1 pb-1">
                 <div class="row">
