--- a/BookingApp/templates/booking/create_booking.html
+++ b/BookingApp/templates/booking/create_booking.html
@@ -1,7 +1,10 @@
-{% include 'base.html' %}{% load widget_tweaks %} {% block content %}
-<h1 class="text-center">Booking of property</h1>
+{% include 'base.html' %}{% load widget_tweaks %}
+{% load static %} {% block content %}
+<div class="col-sm-12 bg-image" style="background-image: url('{% static "images/sea.jpg" %}');background-repeat: no-repeat;background-size: 240vh 200vh;">
+
+<h1 class="text-center">Booking of Hotel</h1>
 <hr/>
-<div class="container col-sm-8 bg-success mb-4">
+<div class="container col-sm-8 mb-4">
 <form method="post">
   {% csrf_token %} 
   <div class="row container">
@@ -20,7 +23,7 @@
   </div>
   </div>
   {% else %}
-  <div class="col-sm-6 bg-success">
+  <div class="col-sm-6">
   <div class="form-group mt-1">
     <label for="{{ field.id_for_label }}">{{ field.label }}</label> 
      {% comment %} {{ field|add_class:'form-control' | }} {% endcomment %}
@@ -41,11 +44,12 @@
 
 </div>
  <div class="d-flex justify-content-center ">
-  <button type="submit" class="btn btn-primary mt-2 mb-2 me-4">Submit</button>
-  <a class="btn btn-danger mt-2 mb-2" href="/">CANCEL</a>
+  <button type="submit" class="btn btn-outline-primary mt-2 mb-2 me-4">Submit</button>
+  <a class="btn btn-outline-danger mt-2 mb-2" href="/">CANCEL</a>
   </div>
   </form>
   
+</div>
 </div>
 {% include 'home/footer.html' %} 
 {% endblock %}
