Implemented pagination in list hotels and in admin dashboard

--- a/AdminUser/templates/admin/adminPanel.html
+++ b/AdminUser/templates/admin/adminPanel.html
@@ -15,7 +15,7 @@
       <li class="list-group-item">
         <a
           class="text-decoration-none"
-          href="{% url 'admin_user:manage_users' %}"
+          href="{% url 'admin_user:admin_manage_users' %}"
           ><button style="color: green; width: 250px; ">Manage Admin Users</button></a
         >
       </li>
