--- a/AdminUser/templates/admin/users/list_users.html
+++ b/AdminUser/templates/admin/users/list_users.html
@@ -26,5 +26,22 @@
     {% endfor %}
   </tbody>
 </table>
+{% if is_paginated %}
+        <div class="pagination justify-content-end me-4">
+            <span class="page-links d-flex float-right">
+                {% if page_obj.has_previous %}
+                
+                    <a class="text-decoration-none me-2" href="/adminuser/normalusers?page={{ page_obj.previous_page_number }}"><span class="h2" aria-hidden="true">&laquo;</span> </a>
+                {% endif %}
+                <span class="page-current">
+                   <p class="small"> Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</p>
+                </span>
+                {% if page_obj.has_next %}
+                    <a class="ml-2 text-decoration-none" href="/adminuser/normalusers?page={{ page_obj.next_page_number }}"> <span class="h2" aria-hidden="true">&raquo;</span></a>
+                 {% endif %}
+               
+            </span>
+        </div>
+    {% endif %}
 
 {% endblock %}
