--- a/AdminUser/templates/admindashboard/sidenav.html
+++ b/AdminUser/templates/admindashboard/sidenav.html
@@ -53,7 +53,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="sidebar-link" href="{% url 'admin_user:manage_users' %}">
+              <a class="sidebar-link" href="{% url 'admin_user:admin_manage_users' %}">
                 <span class="icon-holder">
                   <i class='far fa-user-circle' style="color:blue"></i>
                 </span>
